Started with BOM. Added some datasheets.

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,13 @@ dkms.conf
 *.raw
 *.fft
 *.plt
+*.txt
+*.net
+
+#LibreOffice#
+#####################
+.~*
+
 
 # Eclipse #
 #####################
