--- a/.gitignore
+++ b/.gitignore
@@ -108,9 +108,32 @@ dkms.conf
 *.txt
 *.net
 
-#LibreOffice#
+# LibreOffice #
 #####################
 .~*
+
+# KiCAD #
+#####################
+# For PCBs designed using KiCad: http://www.kicad-pcb.org/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*~
+_autosave-*
+*.tmp
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+.dsn
+
+# Exported BOM files
+*.xml
+*.csv
 
 
 # Eclipse #
